完成了UI设计，以及通信，但是被最后的打印卡死，解决思路应该是改成controller，并且直接在xaml的cs中开多线程

--- a/Intelligent-dormitory-integrated-control-system（PC）/Page/MainPage.xaml
+++ b/Intelligent-dormitory-integrated-control-system（PC）/Page/MainPage.xaml
@@ -6,7 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    >
 
     <RelativePanel>
         <RelativePanel AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True">
@@ -45,6 +46,7 @@
                     RelativePanel.RightOf="LoginButton"
                     Width="85" Height="35"
                     Margin="55,0,0,0"
+                    Click="RegisterButton_Click"
                 >
                     <TextBlock
                     Text="Register"
