这个版本可能炸了，先保存一发

--- a/Intelligent-dormitory-integrated-control-system（PC）/Page/MainPage.xaml
+++ b/Intelligent-dormitory-integrated-control-system（PC）/Page/MainPage.xaml
@@ -19,12 +19,14 @@
             <TextBox
                 x:Name="UserNameTextBox"
                 RelativePanel.Below="UserImage" Margin="0,10,0,0"
+                Text="whitesad"
                 Width="200" 
                 PlaceholderText="UserName:"
                 MaxLength="32"
                 />
             <PasswordBox
                 x:Name="PassWordTextBox"
+                Password="yang"
                 RelativePanel.Below="UserNameTextBox" Margin="0,10,0,0"
                 Width="200" 
                 PlaceholderText="PassWord:"
