--- a/Intelligent-dormitory-integrated-control-system（PC）/Page/CommunicatePage.xaml
+++ b/Intelligent-dormitory-integrated-control-system（PC）/Page/CommunicatePage.xaml
@@ -10,30 +10,72 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="2*">
-            </RowDefinition>
-            <RowDefinition Height="1*">
-            </RowDefinition>
+            <RowDefinition Height="333*"/>
+            <RowDefinition Height="167*"/>
         </Grid.RowDefinitions>
+        
+ 
         <!--第一行-->
-        <WebView Grid.Row="0"
+        <WebView Grid.Row="0" 
                  Name="ChatBox" HorizontalAlignment="Stretch" Margin="0,0,0,10" VerticalAlignment="Stretch">
         </WebView>
         <!--第二行-->
 
-        <StackPanel Grid.Row="1" Padding="10" VerticalAlignment="Bottom">
-            <TextBox Name="TextSend"
+
+        <RelativePanel>
+            <Button x:Name="MenuButton"
+                    FontFamily="Segoe MDL2 Assets" Content="&#xE700;" FontSize="36"
+                    Click="MenuButton_Click"
+                    />
+        </RelativePanel>
+
+
+
+        <SplitView Name="MySplitView" 
+                   Grid.Row="1"
+                   DisplayMode="CompactInline"
+                   OpenPaneLength="500"
+                   CompactPaneLength="54" 
+                   HorizontalAlignment="Left">
+            <SplitView.Pane>
+                <ListBox SelectionMode="Single" 
+                         Name="IconsListBox" 
+                         SelectionChanged="IconsListBox_SelectionChanged"
+                         
+                         >
+                    <ListBoxItem Name="ShareListBoxItem">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="36" Text="&#xE72D;" />
+                            <TextBlock Text="Share" FontSize="24" Margin="20,0,0,0" />
+                        </StackPanel>
+                    </ListBoxItem>
+
+                    <ListBoxItem Name="FavoritesListBoxItem">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="36" Text="&#xE734;" />
+                            <TextBlock Text="Favorites" FontSize="24" Margin="20,0,0,0" />
+                        </StackPanel>
+                    </ListBoxItem>
+
+                </ListBox>
+            </SplitView.Pane>
+            <SplitView.Content>
+                <StackPanel Grid.Row="1" Padding="10" VerticalAlignment="Bottom">
+                    <TextBox Name="TextSend"
                      Margin="0,0,5.4,0" Height="114" HorizontalAlignment="Stretch"
                      KeyDown="TextSend_KeyDown"
-                        />
-            <Button Content="发送！"
+                     />
+                    <Button Content="发送！"
                     Background="LightBlue"
                     FontSize="20"
                     HorizontalAlignment="Left"
                     Margin="0,5,0,0"
                     Click="SendButton_Click" VerticalAlignment="Center" Height="auto"  Width="auto"/>
-        </StackPanel>
-        
+                </StackPanel>
+
+            </SplitView.Content>
+        </SplitView>
+
 
     </Grid>
 </Page>
