进行了代码整理，删掉了原本连接Server成功的提示

--- a/Intelligent-dormitory-integrated-control-system（PC）/Page/MainPage.xaml
+++ b/Intelligent-dormitory-integrated-control-system（PC）/Page/MainPage.xaml
@@ -19,7 +19,7 @@
             <TextBox
                 x:Name="UserNameTextBox"
                 RelativePanel.Below="UserImage" Margin="0,10,0,0"
-                Text="whitesad"
+                Text=""
                 Width="200" 
                 PlaceholderText="UserName:"
                 MaxLength="32"
@@ -27,7 +27,7 @@
                 />
             <PasswordBox
                 x:Name="PassWordTextBox"
-                Password="yang"
+                Password=""
                 RelativePanel.Below="UserNameTextBox" Margin="0,10,0,0"
                 Width="200" 
                 PlaceholderText="PassWord:"
